experiment with FFI + spinoff 5.4 lua console

--- a/test/meson.build
+++ b/test/meson.build
@@ -9,6 +9,16 @@
 
 if boost_dep.found()
 
+## Simple FFI test
+simple = shared_module ('simple', '''
+    Simple.cpp
+'''.split(),
+    install: false)
+
+test ('Simple FFI', find_program('luajit'), 
+    args : files('Simple_test.lua'),
+    workdir : meson.current_source_dir())
+
 ## Unit Tests
 luabot_unit_test_sources = '''
     basics.cpp
