--- a/meson.build
+++ b/meson.build
@@ -22,12 +22,53 @@ luabot_sdk_libdirs = [ fs.expanduser ('~/SDKs/luabot/linux64/lib') ]
 
 cpp.check_header ('luajit.h', required: true, 
     include_directories: luabot_sdk_includes)
-cpp.find_library ('luajit-5.1', required: true,
+libluajit = cpp.find_library ('luajit-5.1', required: true,
     dirs: [ luabot_sdk_libdirs ])
+
+libapriltag = cpp.find_library ('apriltag', dirs: [ luabot_sdk_libdirs ], required : true)
+libcameraserver = cpp.find_library ('cameraserver', dirs: [ luabot_sdk_libdirs ], required : true)
+libcscore = cpp.find_library ('cscore', dirs: [ luabot_sdk_libdirs ], required : true)
+libglass = cpp.find_library ('glass', dirs: [ luabot_sdk_libdirs ], required : true)
+libglassnt = cpp.find_library ('glassnt', dirs: [ luabot_sdk_libdirs ], required : true)
+
+libhalsim_ds_socket = cpp.find_library ('halsim_ds_socket', dirs: [ luabot_sdk_libdirs ], required : true)
+libhalsim_gui = cpp.find_library ('halsim_gui', dirs: [ luabot_sdk_libdirs ], required : true)
+libhalsim_ws_client = cpp.find_library ('halsim_ws_client', dirs: [ luabot_sdk_libdirs ], required : true)
+libhalsim_ws_core = cpp.find_library ('halsim_ws_core', dirs: [ luabot_sdk_libdirs ], required : true)
+libhalsim_ws_server = cpp.find_library ('halsim_ws_server', dirs: [ luabot_sdk_libdirs ], required : true)
+libhalsim_xrp = cpp.find_library ('halsim_xrp', dirs: [ luabot_sdk_libdirs ], required : true)
+
+libntcore = cpp.find_library ('ntcore', dirs: [ luabot_sdk_libdirs ], required : true)
+
+libwpigui = cpp.find_library ('wpigui', dirs: [ luabot_sdk_libdirs ], required : true)
+
+## WPIlib HAL
+libwpiHal = cpp.find_library ('wpiHal', dirs: [ luabot_sdk_libdirs ], required : true)
+wpiHal_dep = declare_dependency (
+    include_directories: [fs.expanduser ('~/SDKs/luabot/linux64/include/hal')],
+    dependencies: [libwpiHal]
+)
+
+## WPIlib C
+libwpilibc = cpp.find_library ('wpilibc', dirs: [ luabot_sdk_libdirs ], required : true)
+wpilibc_dep = declare_dependency (
+    include_directories: [fs.expanduser ('~/SDKs/luabot/linux64/include/wpilibc')],
+    dependencies: [libwpilibc]
+)
+
+libwpilibNewCommands = cpp.find_library ('wpilibNewCommands', dirs: [ luabot_sdk_libdirs ], required : true)
+libwpimath = cpp.find_library ('wpimath', dirs: [ luabot_sdk_libdirs ], required : true)
+libwpinet = cpp.find_library ('wpinet', dirs: [ luabot_sdk_libdirs ], required : true)
+libwpiutil = cpp.find_library ('wpiutil', dirs: [ luabot_sdk_libdirs ], required : true)
+
+libromiVendordep = cpp.find_library ('romiVendordep', dirs: [ luabot_sdk_libdirs ], required : true)
+libxrpVendordep = cpp.find_library ('xrpVendordep', dirs: [ luabot_sdk_libdirs ], required : true)
 
 luabot_dep = declare_dependency (
     link_with : [],
-    include_directories : include_directories ('./include'),
+    include_directories : [
+        include_directories ('./include'),
+        luabot_sdk_includes ],
     dependencies : [])
 
 luabot_internal_dep = declare_dependency (
@@ -35,8 +76,12 @@ luabot_internal_dep = declare_dependency (
     include_directories : include_directories ('./include'),
     dependencies : [ boost_dep ])
 
+readline_dep = dependency('readline')
+
 luabot_exe = executable ('luabot', [
-    'util/luabot/main.cpp'
-])
+        'util/luabot/main.cpp'
+    ],
+    cpp_args: ['-DLUA_USE_READLINE=1'],
+    dependencies: [luabot_dep, libluajit, readline_dep])
 
 subdir ('test')
