--- a/util/parse.yaml
+++ b/util/parse.yaml
@@ -1,6 +1,83 @@
-header: frc/geometry/Pose2d.h
+typename: Joystick
+header: frc/Joystick.h
+namespace: frc
+
 destructor: true
+
+templates:
+  Constructor: &Constructor
+    return_type: cptr
+    factory: true
+    static: false
+
+  GetInt: &GetInt
+    return_type: int
+    const: true
+  SetInt: &SetInt
+    params:
+      channel: int
+    return_type: void
+  GetDouble: &GetDouble
+    return_type: double
+    const: true
+  GetBool: &GetBool
+    return_type: bool
+    const: true
+
+# Methods take the object as the first parameter
 methods:
-  X:
-    - returns: void
-  Y:
+  New:
+    <<: *Constructor
+    params:
+      port: int
+  
+  SetXChannel:
+    <<: *SetInt
+  SetYChannel: 
+    <<: *SetInt
+  SetZChannel: 
+    <<: *SetInt
+  SetTwistChannel:
+    <<: *SetInt
+  SetThrottleChannel:
+    <<: *SetInt
+
+  GetXChannel:
+    <<: *GetInt
+  GetYChannel: 
+    <<: *GetInt
+  GetZChannel: 
+    <<: *GetInt
+  GetTwistChannel: 
+    <<: *GetInt
+  GetThrottleChannel:
+    <<: *GetInt
+
+  GetX:
+    <<: *GetDouble
+  GetY:
+    <<: *GetDouble
+  GetZ:
+    <<: *GetDouble
+  GetTwist:
+    <<: *GetDouble
+  GetThrottle:
+    <<: *GetDouble
+
+  GetTrigger:
+    <<: *GetBool
+  GetTriggerPressed:
+    <<: *GetBool
+    const: false
+  GetTriggerReleased:
+    <<: *GetBool
+    const: false
+
+  GetTop:
+    <<: *GetBool
+  GetTopPressed:
+    <<: *GetBool
+    const: false
+  GetTopReleased:
+    <<: *GetBool
+    const: false
