ctor: stop using metatables

--- a/bindings/frc/Timer.yaml
+++ b/bindings/frc/Timer.yaml
@@ -6,5 +6,4 @@ methods:
   GetFPGATimestamp:
     static: true
     return_type: double
-    c_body: |
-      return frc::Timer::GetFPGATimestamp().value();
+    c_body: return frc::Timer::GetFPGATimestamp().value();
