wpilib/luajit: use normal meson 'dependency()' lookups

--- a/meson.build
+++ b/meson.build
@@ -9,6 +9,7 @@ project ('luabot', ['cpp', 'c'],
         'cpp_std=c++20',
     ])
 
+
 fs = import ('fs')
 luajit_exe = find_program ('luajit')
 
@@ -18,93 +19,20 @@ c = meson.get_compiler ('c')
 cpp = meson.get_compiler ('cpp')
 boost_dep = dependency ('boost', required : false)
 
-luabot_sdk_incdir = fs.expanduser ('~/SDKs/luabot/linux64/include')
-luabot_sdk_includes = include_directories (
-    fs.expanduser ('~/SDKs/luabot/linux64/include'),
-    fs.expanduser ('~/SDKs/luabot/linux64/include/luajit-2.1')
-)
+luajit_dep   = dependency ('luajit', version: '>= 2.1', required: true)
 
-luabot_sdk_libdir = fs.expanduser ('~/SDKs/luabot/linux64/lib')
-luabot_sdk_libdirs = [ luabot_sdk_libdir ]
-
-cpp.check_header ('luajit.h', required: true, 
-    include_directories: luabot_sdk_includes)
-libluajit = cpp.find_library ('luajit-5.1', required: true,
-    dirs: [ luabot_sdk_libdirs ])
-
-wpilib_include_root = fs.expanduser ('~/SDKs/luabot/linux64/include')
-
-## NTCore
-libntcore = cpp.find_library ('ntcore', dirs: [ luabot_sdk_libdirs ], required : true)
-ntcore_dep = declare_dependency(
-    include_directories: [ wpilib_include_root / 'ntcore'],
-    dependencies: [libntcore]
-)
-
-## WPIlib HAL
-libwpiHal = cpp.find_library ('wpiHal', dirs: [ luabot_sdk_libdirs ], required : true)
-wpiHal_dep = declare_dependency (
-    include_directories: [ wpilib_include_root / 'hal'],
-    dependencies: [libwpiHal]
-)
-
-## WPIUtil
-libwpiutil = cpp.find_library ('wpiutil', dirs: [ luabot_sdk_libdirs ], required : true)
-wpiutil_dep = declare_dependency (
-    include_directories: [ wpilib_include_root / 'wpiutil' ],
-    dependencies: [libwpiutil]
-)
-
-## WPIMath
-libwpimath = cpp.find_library ('wpimath', dirs: [ luabot_sdk_libdirs ], required : true)
-wpimath_dep = declare_dependency (
-    include_directories: [ wpilib_include_root / 'wpimath' ],
-    dependencies: [libwpimath]
-)
-
-## WPIlib C
-libwpilibc = cpp.find_library ('wpilibc', dirs: [ luabot_sdk_libdirs ], required : true)
-wpilibc_dep = declare_dependency (
-    include_directories: [
-        fs.expanduser ('~/SDKs/luabot/linux64/include/wpilibc'),
-        fs.expanduser ('~/SDKs/luabot/linux64/include/cscore')],
-    dependencies: [ wpiHal_dep, ntcore_dep, wpiutil_dep, wpimath_dep, 
-                    libwpilibc ]
-)
-
-libapriltag = cpp.find_library ('apriltag', dirs: [ luabot_sdk_libdirs ], required : true)
-apriltag_dep = declare_dependency (
-    include_directories: [
-        fs.expanduser ('~/SDKs/luabot/linux64/include/apriltag')],
-    dependencies: [ wpiutil_dep, wpimath_dep ]
-)
-
-## WPI Misc...
-# libcameraserver = cpp.find_library ('cameraserver', dirs: [ luabot_sdk_libdirs ], required : true)
-# libcscore = cpp.find_library ('cscore', dirs: [ luabot_sdk_libdirs ], required : true)
-
-# libglass = cpp.find_library ('glass', dirs: [ luabot_sdk_libdirs ], required : true)
-# libglassnt = cpp.find_library ('glassnt', dirs: [ luabot_sdk_libdirs ], required : true)
-
-# libhalsim_ds_socket = cpp.find_library ('halsim_ds_socket', dirs: [ luabot_sdk_libdirs ], required : true)
-# libhalsim_gui = cpp.find_library ('halsim_gui', dirs: [ luabot_sdk_libdirs ], required : true)
-# libhalsim_ws_client = cpp.find_library ('halsim_ws_client', dirs: [ luabot_sdk_libdirs ], required : true)
-# libhalsim_ws_core = cpp.find_library ('halsim_ws_core', dirs: [ luabot_sdk_libdirs ], required : true)
-# libhalsim_ws_server = cpp.find_library ('halsim_ws_server', dirs: [ luabot_sdk_libdirs ], required : true)
-# libhalsim_xrp = cpp.find_library ('halsim_xrp', dirs: [ luabot_sdk_libdirs ], required : true)
-
-# libwpigui = cpp.find_library ('wpigui', dirs: [ luabot_sdk_libdirs ], required : true)
-
-# libwpilibNewCommands = cpp.find_library ('wpilibNewCommands', dirs: [ luabot_sdk_libdirs ], required : true)
-# libwpinet = cpp.find_library ('wpinet', dirs: [ luabot_sdk_libdirs ], required : true)
-# libromiVendordep = cpp.find_library ('romiVendordep', dirs: [ luabot_sdk_libdirs ], required : false)
-# libxrpVendordep = cpp.find_library ('xrpVendordep', dirs: [ luabot_sdk_libdirs ], required : false)
+hal_dep      = dependency ('hal', method: 'cmake', required: true)
+ntcore_dep   = dependency ('ntcore', method: 'cmake', required: true)
+wpiutil_dep  = dependency ('wpiutil', method: 'cmake', required: true)
+wpimath_dep  = dependency ('wpimath', method: 'cmake', required: true)
+wpilibc_dep  = dependency ('wpilibc', method: 'cmake', required: true)
+apriltag_dep = dependency ('apriltag', method: 'cmake', required: true)
+cameraserver_dep = dependency ('cameraserver', method: 'cmake', required: true)
+cscore_dep   = dependency ('cscore', method: 'cmake', required: true)
 
 luabot_dep = declare_dependency (
     link_with : [],
-    include_directories : [
-        include_directories ('./include'),
-        luabot_sdk_includes ],
+    include_directories : [ include_directories ('./include') ],
     dependencies : [])
 
 luabot_internal_dep = declare_dependency (
@@ -118,8 +46,8 @@ subdir ('src')
 luabot_exe = executable ('luabot', [
         'src/luabot.cpp'
     ],
-    cpp_args: ['-DLUA_USE_READLINE=1'],
-    dependencies: [luabot_dep, libluajit, readline_dep],
+    cpp_args: ['-DLUA_USE_READLINE=@0@'.format(readline_dep.found() ? 1 : 0)],
+    dependencies: [luabot_dep, luajit_dep, readline_dep],
     install: true)
 
 subdir ('bindings')
