yaml: check for yaml python package in meson setup.

--- a/meson.build
+++ b/meson.build
@@ -9,6 +9,7 @@ project ('luabot', ['cpp', 'c'],
         'cpp_std=c++20',
     ])
 
+python_exe = import('python').find_installation ('python3', modules : [ 'yaml' ])
 
 fs = import ('fs')
 luajit_exe = find_program ('luajit')
