added simple performance test. needs more

--- a/test/meson.build
+++ b/test/meson.build
@@ -38,6 +38,16 @@ foreach t : [ 'requireall' ]
         env: luabot_env)
 endforeach
 
+plusone_exe = executable ('plusone', [ 'plusone.cpp' ],
+                          dependencies: [wpilibc_dep])
+test ('PlusOne (native)', plusone_exe, env: luabot_env, suite: 'perf')
+
+test ('PlusOne (luajit)', luabot_exe,
+    args : meson.current_source_dir() / 'plusone.lua',
+    workdir : lua_workdir,
+    suite : 'perf',
+    env: luabot_env)
+
 subdir('wpi')
 
 if boost_dep.found()
