Use luajit meson subproject and use 'luabot-wpilibc' for the frc FFI c library

--- a/bindings/meson.build
+++ b/bindings/meson.build
@@ -54,7 +54,7 @@ foreach f : wpi_resources
     )
 endforeach
 
-luabot_lib = library ('luabot',
+luabot_lib = library ('luabot-wpilibc',
     [ luabot_src_cpp_files, frc_cpp_files, wpi_cpp_files, gen_cpp ],
     dependencies: [ wpilibc_dep, wpimath_dep, apriltag_dep ],
     install: true
