--- a/meson.build
+++ b/meson.build
@@ -31,6 +31,8 @@ luajit_proj = subproject ('luajit', required: true,
 luajit_dep = luajit_proj.get_variable ('lua_dep')
 luajit_h = luajit_proj.get_variable ('luajit_h')
 
+subproject ('lanes', required: true)
+
 hal_dep      = dependency ('hal', method: 'cmake', required: true)
 ntcore_dep   = dependency ('ntcore', method: 'cmake', required: true)
 wpiutil_dep  = dependency ('wpiutil', method: 'cmake', required: true)
