tests: fix bad LUA_PATH when used as subproject

--- a/test/meson.build
+++ b/test/meson.build
@@ -12,7 +12,7 @@ lua_path_pat = '@0@/?.lua;@0@/?/init.lua'
 
 lua_path = 'LUA_PATH=?.lua;?/init.lua'
 lua_path += ';' + lua_path_pat.format ('bindings')
-lua_path += ';' + lua_path_pat.format (fs.stem(meson.project_build_root()) / 'bindings' / 'lua')
+lua_path += ';' + lua_path_pat.format (bindings_root / 'lua')
 lua_path += ';' + lua_path_pat.format (meson.current_source_dir())
 lua_path += ';' + lua_path_pat.format ('/usr/local/share/lua/5.1')
 
